--- a/ui/valk.html
+++ b/ui/valk.html
@@ -10,11 +10,13 @@
            position: relative;
            width: 100%;
            overflow: hidden;
+		   -webkit-app-region: drag;
          }
 		 
 		 img {
 			height: 35px;
 			width: 35px;
+			-webkit-app-region: drag;
 		 }
 		 
 		 #bottomBar {
@@ -23,16 +25,22 @@
            position: absolute;
 		   top:12%;
 		   left:1%;
+		   -webkit-app-region: drag;
 		 }
 		 
-		 #images {
+		 .buffs {
 		   overflow: hidden;
 		   z-index: -1;
            position: absolute;
 		   top:40%;
-		   left:17%
+		   -webkit-app-region: drag;
 		 }
-		 
+
+		 .buffs>b {
+		    font-family: "Comic Sans MS", "Comic Sans", fantasy;
+			-webkit-app-region: drag;
+			font-size: 13px;
+		 }
       </style>
    </head>
    <body id="mainBody" style="transform: scale(0.65, 0.65);">
@@ -48,10 +56,19 @@
 			</g>
 		</svg>
 		<div id="bottomBar" style="width:250;height:90">
-			<div id="images" style="width:250;">
-				<img id="10155130" src="https://i.imgur.com/ddIqqX0.png" style="display:none;">
-				<img id="10155512" src="https://i.imgur.com/DDbReWN.png" style="display:none;">
-				<img id="18817" src="https://i.imgur.com/qUmH6Yn.png" style="display:none;">
+			<div class="buffs" id="10155130" style="display:none;text-align:center;left:16%;">
+				<img src="https://i.imgur.com/ddIqqX0.png"/><br/>
+				<b id="t10155130" style="color: #FFFFFF;">r1</b>
+			</div>
+			
+			<div class="buffs" id="10155512" style="display:none;text-align:center;left:16%;">
+				<img src="https://i.imgur.com/DDbReWN.png"/><br/>
+				<b id="t10155130" style="color: #FFFFFF">gf1</b>
+			</div>
+			
+			<div class="buffs" id="18817" style="display:none;text-align:center;left:35%;">
+				<img src="https://i.imgur.com/qUmH6Yn.png"/><br/>
+				<b id="t18817" style="color: #FFFFFF">g1</b>
 			</div>
 		</div>
    </body>
